--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-transformer-sharp": "^4.21.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "typed.js": "^2.0.12"
   },
   "devDependencies": {
