--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
+    "axios": "^0.27.2",
     "gatsby": "^4.21.0",
     "gatsby-plugin-google-analytics": "^4.21.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
