--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-transformer-sharp": "^4.21.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-masonry-css": "^1.0.16",
     "react-responsive-carousel": "^3.2.23",
     "typed.js": "^2.0.12"
   },
@@ -43,8 +44,7 @@
     "prettier": "2.7.1",
     "typescript": "^4.7.4"
   },
-    "lint-staged": {
-      "**/*": "prettier --write --ignore-unknown"
-    }
-  
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
+  }
 }
