feat: google analytics

--- a/env.example
+++ b/env.example
@@ -4,3 +4,11 @@ SENDGRID_API_KEY=
 SENDGRID_AUTHORIZED_EMAIL=
 CONTACT_FORM_EMAIL=
 CONTACT_FORM_SUBJECT=
+REDEPLOY_URL=
+GATSBY_REDEPLOY_PASSWORD=
+ENABLE_GATSBY_REFRESH_ENDPOINT=
+GATSBY_GOOGLE_ANALYTICS_TRACKING_ID=
+GATSBY_GOOGLE_OPTIMIZE_TRACKING_ID=
+GATSBY_GOOGLE_EXPERIMENT_ID=
+GATSBY_GOOGLE_OPTIMIZE_VARIATION_ID=
+GATSBY_COOKIE_DOMAIN=
