--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby": "^4.21.0",
     "gatsby-plugin-google-analytics": "^4.21.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-google-gtag": "^4.25.0",
     "gatsby-plugin-image": "^2.21.0",
     "gatsby-plugin-manifest": "^4.21.0",
     "gatsby-plugin-sharp": "^4.21.0",
